# zeth-rwasm

./: .gitmodules  Cargo.toml  Makefile  rust-toolchain
e2e/: Cargo.toml
e2e/src/: helpers.rs  lib.rs  runtime.rs
host/: Cargo.toml
host/src/: main.rs
host/src/operations/: build.rs  mod.rs
lib/: Cargo.toml
lib/src/: consts.rs  input.rs  lib.rs  mem_db.rs  output.rs
lib/src/builder/: finalize.rs  initialize.rs  mod.rs  prepare.rs
lib/src/builder/execute/: ethereum.rs  mod.rs  optimism.rs
lib/src/host/: mod.rs  mpt.rs  preflight.rs  provider_db.rs  verify.rs
lib/src/host/provider/: cached_rpc_provider.rs  file_provider.rs  mod.rs  rpc_provider.rs
lib/src/optimism/: batcher.rs  batcher_channel.rs  composition.rs  mod.rs  system_config.rs
primitives/: Cargo.toml
primitives/src/: access_list.rs  batch.rs  block.rs  const.rs  keccak.rs  lib.rs  mmr.rs  receipt.rs  revm.rs
primitives/src/transactions/: ethereum.rs  mod.rs
primitives/src/trie/: account.rs  mod.rs  mpt.rs
stf/: Cargo.toml
stf/src/: lib.rs  word_reader.rs
testing/ef-tests/: Cargo.toml
