[workspace]
resolver = "2"
members = [
    "e2e",
    #    "guests",
    "host",
    "lib",
    "primitives",
    "stf",
    #    "testing/ef-tests",
]

[workspace.package]
authors = []
repository = "https://github.com/wasm0/fuentbase"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]

# Always optimize; building and running the guest takes much longer without optimization.
#[profile.dev]
#opt-level = 3
#
#[profile.dev.build-override]
#opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
bonsai-sdk = { version = "0.6.0", features = ["async"] }
hashbrown = { version = "0.14", features = ["inline-more"] }
risc0-build = { version = "0.21" }
risc0-zkvm = { version = "0.21", default-features = false }
ethers-contract = { version = "2.0", features = ["optimism"] }
ethers-core = { version = "2.0", features = ["optimism"] }
ethers-providers = { version = "2.0", features = ["optimism"] }
alloy-sol-types = { version = "0.7" }
alloy-primitives = { version = "0.7", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
hex = "0.4.3"
bytes = { version = "1.5" }
tokio = { version = "1.23", features = ["full"] }
serde = "1.0"
cfg-if = "1.0.0"

# fluent
fluentbase-sdk = { path = "../fluentbase/crates/sdk", default-features = false }
fluentbase-types = { path = "../fluentbase/crates/types", default-features = false }

# revm
#revm-primitives = { version = "3.0", default_features = false }
#revm = { version = "9.0", default-features = false, features = [
#    "std",
#    "serde",
#    "optimism",
#] }
revm-primitives = { path = "../revm-rwasm/crates/primitives", default_features = false }
revm = { path = "../revm-rwasm/crates/revm_fluent", package = "revm-fluent", default-features = false, features = [
    "std",
    "serde",
    "revm-rwasm",
    "e2e",
] }
