[workspace]
resolver = "2"
members = [
    #    "guests",
    #    "host",
    #    "testing/ef-tests",
    "e2e",
    "lib",
    "primitives",
    "stf",
]

[workspace.package]
authors = []
repository = "https://github.com/wasm0/fuentbase"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]

# Always optimize; building and running the guest takes much longer without optimization.
#[profile.dev]
#opt-level = 3
#
#[profile.dev.build-override]
#opt-level = 3

[profile.release]
debug = 0
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
bonsai-sdk = { version = "0.6.0", features = ["async"] }
hashbrown = { version = "0.14" }
risc0-build = { version = "0.21" }
risc0-zkvm = { version = "0.21", default-features = false }
ethers-contract = { version = "2.0", features = [
    "optimism"
] }
ethers-core = { version = "2.0", features = [
    "optimism"
] }
ethers-providers = { version = "2.0", features = [
    "optimism"
] }
alloy-sol-types = { version = "0.7" }
alloy-primitives = { version = "0.7", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
hex = "0.4.3"
bytes = { version = "1.5" }
tokio = { version = "1.23", features = ["full"] }
cfg-if = "1.0.0"
rlp = "0.5.2"
once_cell = "1.18"
libflate = "2.0.0"
ruint = { version = "1.10", default-features = false }
log = "0.4.21"
env_logger = "0.11.3"
chrono = { version = "0.4", default-features = false }
flate2 = "1.0.26"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1.3"
serde_with = "3.1"
k256 = { version = "=0.13.3", features = [
    "std",
    "ecdsa",
], default_features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "=0.10.6", default-features = false }
sha3 = "0.10"
thiserror = "1.0"
hex-literal = "0.4"

# local
zeth-primitives = { path = "primitives", features = ["revm", "ethers"] }
zeth-lib = { path = "lib" }

# fluent
fluentbase-sdk = { path = "../fluentbase/crates/sdk", default-features = false }
fluentbase-types = { path = "../fluentbase/crates/types", default-features = false }

# revm
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "devel", features = ["rwasm"] }
revm = { package = "revm-fluent", git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "devel", features = [
    "std",
    "serde",
    "rwasm",
    #    "debug_print",
], default-features = false }
#revm-primitives = { path = "../revm-rwasm/crates/primitives", default_features = false }
#revm = { path = "../revm-rwasm/crates/revm_fluent", package = "revm-fluent", default-features = false, features = [
#    "std",
#    "serde",
#    "rwasm",
#    #    "debug_print",
#    #    "e2e",
#] }
