[package]
name = "zeth"
version = "0.1.0"
edition = "2021"
default-run = "zeth"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
ethers-providers = { workspace = true }
hex = { workspace = true }
log = "0.4"
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { version = "0.1", features = ["log"] }
#zeth-guests = { path = "../guests" }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"

[features]
metal = [
    "risc0-zkvm/metal"
]
# cuda = ["risc0-zkvm/cuda"]
disable-dev-mode = [
    "risc0-zkvm/disable-dev-mode"
]
