[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
ethers-core = { version = "2.0", features = ["optimism"] }
hashbrown.workspace = true
libflate = "2.0.0"
once_cell = "1.18"
revm = { workspace = true }
risc0-zkvm = { version = "0.21", default-features = false, features = ['std'] }
ruint = { version = "1.10", default-features = false }
serde = "1.0"
thiserror = "1.0"
zeth-primitives = { path = "../primitives", features = ["revm", "ethers"] }

fluentbase-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false }
ethers-providers = { version = "2.0", features = ["optimism"] }
flate2 = "1.0.26"
log = "0.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.23", features = ["full"] }
zeth-primitives = { path = "../primitives", features = ["revm", "ethers"] }

[dev-dependencies]
bincode = "1.3"
serde_with = "3.1"

[features]
default = [
    "std",
    "revm-rwasm",
]
std = [
    "revm/std",
]
revm-rwasm = []
