[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
hashbrown.workspace = true
revm = { workspace = true }
once_cell = { workspace = true }
ethers-core = { workspace = true }
libflate = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeth-primitives = { workspace = true }

# fluentbase
fluentbase-types = { workspace = true, default-features = false }
fluentbase-sdk = { workspace = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ethers-providers = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

zeth-primitives = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
serde_with = { workspace = true }

[features]
default = [
    "std",
    "revm-rwasm",
]
std = [
    "revm/std",
]
revm-rwasm = []
