[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true, default-features = false }
anyhow = { workspace = true }
bytes = { orkspace = true, default-features = false }
ethers-core = { version = "2.0", optional = true, features = ["optimism"] }
k256 = { version = "=0.13.3", features = [
    "std",
    "ecdsa",
], default_features = false }
revm-primitives = { workspace = true, optional = true }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "=0.10.6", default-features = false }
sha3 = "0.10"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = "0.4"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"

[features]
ethers = ["dep:ethers-core"]
revm = ["dep:revm-primitives"]
