[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true, default-features = false }
alloy-rlp = { workspace = true, default-features = false }
alloy-rlp-derive = { workspace = true, default-features = false }
anyhow = { workspace = true, default-features = false }
bytes = { workspace = true }
ethers-core = { workspace = true, optional = true }
revm-primitives = { workspace = true, default-features = false, optional = true }
rlp = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

fluentbase-sdk = { workspace = true }
hashbrown.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
hex-literal = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
ethers = ["dep:ethers-core"]
revm = ["dep:revm-primitives"]
std = [
    "anyhow/std",
]
