[package]
name = "fluent-stf"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-sdk = { workspace = true }
zeth-lib = { workspace = true }
zeth-primitives = { workspace = true }
risc0-zkvm = { workspace = true }

[features]
std = [
    "fluentbase-sdk/std",
]

[lib]
crate-type = ["cdylib"]
